--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ecom/database": "*",
     "@ecom/ui": "*",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "lucide-react": "0.456.0",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
