--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "db:push": "yarn with-env yarn workspace @ecom/database db:push",
     "db:migrate": "yarn with-env yarn workspace @ecom/database db:migrate",
     "db:seed": "yarn with-env yarn build --filter @ecom/database --filter @ecom/auth-kit && yarn workspace @ecom/database db:seed",
-    "clean": "find . -name node_modules -o -name build -o -name .next -o -name .turbo -o -name dist -o -name .docusaurus -o -name generated -type d -prune | xargs rm -rf"
+    "clean": "find . -name node_modules -o -name build -o -name .next -o -name .turbo -o -name dist -o -name .docusaurus -o -name generated -type d -prune | xargs rm -rf",
+    "prepare": "husky"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
@@ -40,7 +41,9 @@
     "cspell": "^8.17.1",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
+    "husky": "^9.1.7",
     "next-intl": "^3.26.3",
+    "pinst": "^3.0.0",
     "prettier": "^3.2.5",
     "tsc": "^2.0.4",
     "tsup": "^8.3.5",
