--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "spell": "cspell lint --no-progress --relative",
+    "spell": "cspell lint --color --no-progress --relative",
     "typecheck": "turbo typecheck",
     "postinstall": "yarn manypkg check",
     "with-env": "dotenv -e .env --",
