--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "spell": "cspell lint --color --no-progress --relative",
+    "spell": "cspell lint --no-progress --relative",
     "typecheck": "turbo typecheck",
     "postinstall": "yarn manypkg check",
     "with-env": "dotenv -e .env --",
-    "check:prettier": "yarn prettier -c .",
+    "prettier:fix": "prettier --write \"**/*.{ts,tsx,md,js,json}\"",
+    "prettier:check": "yarn prettier -c .",
     "db:start": "docker compose -f docker-compose.yml up -d",
     "db:generate": "yarn with-env turbo db:generate",
     "db:stop": "docker compose -f docker-compose.yml down",
