--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,18 @@ on:
   workflow_dispatch:
   pull_request:
 
+env:
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+  API_KEY: 'abcdef1234'
+  REDIS_PORT: 6380
+  REDIS_HOST: localhost
+  DATABASE_URL: postgresql://root@localhost:26258/ecom-dev?sslmode=disable,
+  NEXTAUTH_URL: http://localhost:3000
+  NEXTAUTH_SECRET: abcdef1234,
+  GOOGLE_CLIENT_ID: aaaabcdef1234,
+  GOOGLE_CLIENT_SECRET: aaaabbbbcdef1234
+
 jobs:
   ci:
     name: 'Continuous Integration'
