--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,12 +21,16 @@
     "@fastify/sensible": "^6.0.3",
     "@fastify/swagger": "^9.4.2",
     "date-fns": "^4.1.0",
+    "fast-redact": "^3.5.0",
     "fastify": "^5.2.1",
     "fastify-zod": "^1.4.0",
     "ioredis": "^5.6.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "tiny-glob": "^0.2.9"
   },
   "devDependencies": {
-    "@ecom/config": "*"
+    "@ecom/config": "*",
+    "@types/fast-redact": "^3.0.4"
   }
 }
