--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ecom/database": "*",
     "@fastify/autoload": "^6.2.0",
+    "@fastify/cookie": "^11.0.2",
     "@fastify/rate-limit": "^10.2.2",
     "@fastify/sensible": "^6.0.3",
     "@fastify/swagger": "^9.4.2",
