--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,9 @@
     "@ecom/database": "*",
     "@ecom/ui": "*",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "cookies": "^0.9.1",
     "cookies-next": "^5.1.0",
+    "got": "^14.4.7",
     "lucide-react": "0.456.0",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@ecom/config": "*",
+    "@types/cookies": "^0.9.0",
     "@types/node": "^22.9.0",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
