--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "with-env": "dotenv -e .env --",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,md,js,json}\"",
     "prettier:check": "yarn prettier -c .",
+    "db:studio": "yarn with-env yarn workspace @ecom/database db:studio",
     "db:start": "docker compose -f docker-compose.yml up -d",
     "db:generate": "yarn with-env turbo db:generate",
     "db:stop": "docker compose -f docker-compose.yml down",
