--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,11 @@
     "@ecom/database": "*",
     "@ecom/ui": "*",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@tanstack/react-query": "^5.73.3",
+    "@trpc/client": "^11.1.0",
+    "@trpc/next": "^11.1.0",
+    "@trpc/react-query": "^11.1.0",
+    "@trpc/server": "^11.1.0",
     "cookies": "^0.9.1",
     "cookies-next": "^5.1.0",
     "got": "^14.4.7",
@@ -22,7 +27,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
     "@ecom/config": "*",
