--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,12 +16,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "0.456.0",
+    "motion": "12.0.0-alpha.2",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-radix": "^4.0.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
