--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ecom/database": "*",
     "@ecom/ui": "*",
+    "@lottiefiles/dotlottie-react": "^0.13.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^5.73.3",
     "@trpc/client": "^11.1.0",
