--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   cockroach:
     container_name: ecom-project-cockroach-dev
-    image: cockroachdb/cockroach:latest
+    image: cockroachdb/cockroach:latest-v24.2
     restart: always
     ports:
       - '26258:26257'
