--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "0.456.0",
     "next": "^15.1.0",
     "next-auth": "^4.24.11",
+    "next-intl": "^3.26.3",
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -37,7 +38,6 @@
     "@types/node": "^22.9.0",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "postcss": "^8.4.47"
   }
 }
