--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
     "@t3-oss/env-nextjs": "^0.6.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "autoprefixer": "^10.4.20",
     "cspell": "^8.17.1",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "husky": "^9.1.7",
-    "next-intl": "^3.26.3",
     "pinst": "^3.0.0",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.14",
     "tsc": "^2.0.4",
-    "tsup": "^8.3.5",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.2",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
