--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "exponential-backoff": "^3.1.1",
-    "prisma": "^6.1.0"
+    "prisma": "^6.1.0",
+    "tsup": "^8.5.0"
   }
 }
