--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "source.organizeImports": "explicit",
     "source.fixAll.eslint": "explicit",
     "source.addMissingImports": "explicit"
-  }
+  },
+  "editor.formatOnSave": true
 }
