--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "^11.1.0",
     "cookies": "^0.9.1",
     "cookies-next": "^5.1.0",
+    "currency.js": "^2.0.4",
     "got": "^14.4.7",
     "lucide-react": "0.456.0",
     "next": "^15.1.0",
