--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,8 @@
     "GOOGLE_CLIENT_ID",
     "GOOGLE_CLIENT_SECRET",
     "NEXTAUTH_URL",
-    "NEXTAUTH_SECRET"
+    "NEXTAUTH_SECRET",
+    "PRISMA_VERBOSE"
   ],
   "tasks": {
     "db:generate": {
