--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,15 +11,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ecom/database": "*",
-    "@ecom/ui": "*",
+    "@ecom/database": "workspace:*",
+    "@ecom/ui": "workspace:*",
     "@lottiefiles/dotlottie-react": "^0.13.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^5.73.3",
-    "@trpc/client": "^11.1.0",
-    "@trpc/next": "^11.1.0",
-    "@trpc/react-query": "^11.1.0",
-    "@trpc/server": "^11.1.0",
+    "@trpc/client": "^11.6.0",
+    "@trpc/next": "^11.6.0",
+    "@trpc/react-query": "^11.6.0",
+    "@trpc/server": "^11.6.0",
     "cookies": "^0.9.1",
     "cookies-next": "^5.1.0",
     "currency.js": "^2.0.4",
@@ -29,17 +29,16 @@
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@ecom/config": "*",
+    "@ecom/config": "workspace:*",
     "@svgr/webpack": "^8.1.0",
     "@types/cookies": "^0.9.0",
     "@types/node": "^22.9.0",
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.1",
-    "postcss": "^8.4.47"
+    "@types/react-dom": "18.3.1"
   }
 }
