--- a/apps/workshop/package.json
+++ b/apps/workshop/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "dev": "storybook dev --quiet -p 6006 --no-open",
     "build": "storybook build --output-dir build --quiet",
-    "chromatic": "chromatic --exit-zero-on-changes --exit-once-uploaded",
+    "build-storybook": "storybook build --output-dir build --quiet",
+    "chromatic": "dotenv -e .env -- chromatic --project-token $CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes --exit-once-uploaded",
     "lint": "eslint .",
     "preview": "vite preview",
-    "build-storybook": "storybook build",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ecom/ui": "*"
+    "@ecom/ui": "workspace:*"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
@@ -28,7 +28,7 @@
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "chromatic": "^11.20.2",
+    "chromatic": "^13.3.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
