--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,12 +8,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@storybook/react": "^8.4.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -21,25 +22,23 @@
     "lucide-react": "0.456.0",
     "motion": "12.0.0-alpha.2",
     "next-themes": "^0.4.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hot-toast": "^2.5.2",
     "swiper": "^11.2.10",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^4.0.2",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "4.1.12"
   },
   "devDependencies": {
-    "@ecom/config": "*",
+    "@ecom/config": "workspace:*",
     "@turbo/gen": "^2.2.3",
     "@types/node": "^22.9.0",
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "@types/react-dom": "18.3.1"
   },
   "exports": {
     "./*": "./src/index.ts",
