--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "ui": "tui",
-  "globalDependencies": [".env", "yarn.lock"],
+  "globalDependencies": [".env", "pnpm-lock.yaml"],
   "globalEnv": [
     "API_URL",
     "NODE_ENV",
@@ -36,7 +36,7 @@
       "dependsOn": ["^lint"]
     },
     "typecheck": {
-      "dependsOn": ["db:generate"]
+      "dependsOn": ["db:generate", "^typecheck"]
     },
     "dev": {
       "dependsOn": ["^db:generate", "^build"],
