--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "apps/*",
     "packages/*"
   ],
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,scss,md,yaml,yml}": [
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "@clack/prompts": "^0.11.0",
     "@commander-js/extra-typings": "^14.0.0",
@@ -49,6 +54,7 @@
     "dotenv-cli": "^8.0.0",
     "fastify-plugin": "^5.1.0",
     "husky": "^9.1.7",
+    "lint-staged": "^16.2.4",
     "picocolors": "^1.1.1",
     "pinst": "^3.0.0",
     "postcss": "^8.4.47",
