--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,7 @@
     "dev": "tsx watch --clear-screen=false src/app.ts",
     "build": "NODE_ENV=production tsup",
     "start": "node build/app.js",
+    "test": "pnpm exec dotenv -e ../../.env -- sh -c 'DATABASE_URL=$TEST_DATABASE_URL vitest'",
     "docs": "mkdir -p generated &&  tsx scripts/generate-docs.ts",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
