--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "lint": "turbo lint",
     "spell": "cspell lint --no-progress --relative",
     "typecheck": "turbo typecheck",
+    "test": "pnpm with-env turbo test",
     "postinstall": "pnpm manypkg check",
     "with-env": "dotenv -e .env --",
     "prettier:fix": "prettier --write \"**/*.{ts,tsx,md,js,json}\"",
-    "prettier:check": "pnpm prettier -c .",
-    "db:studio": "pnpm with-env pnpm workspace @ecom/database db:studio",
+    "prettier:check": "prettier -c .",
+    "db:studio": "pnpm with-env pnpm --filter @ecom/database db:studio",
     "db:start": "docker compose -f docker-compose.yml up -d",
     "db:generate": "pnpm with-env turbo db:generate",
     "db:stop": "docker compose -f docker-compose.yml down",
-    "db:push": "pnpm with-env pnpm workspace @ecom/database db:push",
-    "db:migrate": "pnpm with-env pnpm workspace @ecom/database db:migrate",
-    "db:seed": "pnpm with-env pnpm build --filter @ecom/database --filter @ecom/auth-kit && pnpm workspace @ecom/database db:seed",
+    "db:push": "pnpm with-env pnpm --filter @ecom/database db:push",
+    "db:migrate": "pnpm with-env pnpm --filter @ecom/database db:migrate",
+    "db:seed": "pnpm with-env pnpm build --filter @ecom/database && pnpm --filter @ecom/database db:seed",
+    "db:push:test": "dotenv -e .env -- sh -c 'DATABASE_URL=$TEST_DATABASE_URL pnpm --filter @ecom/database db:push:test'",
     "clean": "find . -name node_modules -o -name build -o -name .next -o -name .turbo -o -name dist -o -name .docusaurus -o -name generated -type d -prune | xargs rm -rf",
     "prepare": "husky"
   },
@@ -49,6 +51,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
     "cspell": "^8.17.1",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
