create common package and add api schemas to it

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ecom/common": "workspace:*",
     "@ecom/database": "workspace:*",
     "@fastify/autoload": "^6.2.0",
     "@fastify/cookie": "^11.0.2",
