create http-client package and use it for api authentication in web app

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -14,8 +14,7 @@
   },
   "scripts": {
     "typecheck": "tsc --noEmit",
-    "lint": "eslint .",
-    "build": "tsc"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@ecom/config": "workspace:*"
