--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ecom/common": "workspace:*",
     "@ecom/database": "workspace:*",
+    "@ecom/http-client": "workspace:*",
     "@ecom/ui": "workspace:*",
     "@lottiefiles/dotlottie-react": "^0.13.4",
     "@next-auth/prisma-adapter": "^1.0.7",
