--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -3,16 +3,24 @@
   "version": "1.0.0",
   "description": "Http clients to interact with the APIs",
   "license": "MIT",
-  "main": "build/index.js",
+  "main": "src/index.ts",
   "types": "src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
+    }
+  },
   "scripts": {
     "typecheck": "tsc --noEmit",
     "lint": "eslint ."
   },
+  "dependencies": {
+    "@better-fetch/fetch": "^1.1.18",
+    "@ecom/common": "workspace:*"
+  },
   "devDependencies": {
     "@ecom/config": "workspace:*"
-  },
-  "dependencies": {
-    "@better-fetch/fetch": "^1.1.18"
   }
 }
