--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cspell": "^8.17.1",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
+    "eslint": "^9.17.0",
     "fastify-plugin": "^5.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
