--- a/packages/http-client/package.json
+++ b/packages/http-client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Http clients to interact with the APIs",
   "license": "MIT",
+  "type": "module",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "exports": {
