--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "@fastify/rate-limit": "^10.2.2",
     "@fastify/sensible": "^6.0.3",
     "@fastify/swagger": "^9.4.2",
+    "@types/qs": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "fast-redact": "^3.5.0",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "qs": "^6.14.0",
     "tiny-glob": "^0.2.9"
   },
   "devDependencies": {
