--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "db:stop": "docker compose -f docker-compose.yml down",
     "db:push": "pnpm with-env pnpm --filter @ecom/database db:push",
     "db:migrate": "pnpm with-env pnpm --filter @ecom/database db:migrate",
-    "db:seed": "pnpm with-env pnpm build --filter @ecom/database && pnpm --filter @ecom/database db:seed",
+    "db:seed": "pnpm with-env pnpm --filter @ecom/database db:seed",
     "db:push:test": "dotenv -e .env -- sh -c 'DATABASE_URL=$TEST_DATABASE_URL pnpm --filter @ecom/database db:push:test'",
     "clean": "find . -name node_modules -o -name build -o -name .next -o -name .turbo -o -name dist -o -name .docusaurus -o -name generated -type d -prune | xargs rm -rf",
     "prepare": "husky"
