add review and category entities and create end-points to manage them

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "@ecom/config": "workspace:*",
-    "@faker-js/faker": "^10.1.0"
+    "@faker-js/faker": "^10.1.0",
+    "prisma-json-types-generator": "^3.6.2"
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
