--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.3",
     "next-themes": "^0.4.3",
+    "nuqs": "^2.7.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "superjson": "^2.2.2"
@@ -41,6 +42,7 @@
     "@types/cookies": "^0.9.0",
     "@types/node": "^22.9.0",
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.1"
+    "@types/react-dom": "18.3.1",
+    "shadcn": "^3.5.0"
   }
 }
